# things-api

./: .gitignore  CHANGELOG.md  LICENSE  README.md  com.things-api.server.plist  env.example  pyproject.toml
.github/workflows/: publish.yml
docs/: api-reference.md  configuration.md  deployment.md  development.md
docs/plans/: 2026-04-03-config-ux-design.md  2026-04-03-config-ux-plan.md  2026-04-03-config-ux-plan.md.tasks.json  2026-04-03-things-api-design.md  2026-04-03-things-api-plan.md  2026-04-03-things-api-plan.md.tasks.json
src/things_api/: __init__.py  app.py  auth.py  cli.py  config.py  init.py  models.py  ratelimit.py
src/things_api/routers/: areas.py  lists.py  projects.py  search.py  tags.py  todos.py
src/things_api/services/: reader.py  writer.py
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_config.py  test_init.py  test_models.py  test_ratelimit.py  test_reader.py  test_router_areas.py  test_router_lists.py  test_router_projects.py  test_router_search.py  test_router_tags.py  test_router_todos.py  test_writer.py
