[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "things-api"
version = "0.1.0"
description = "REST API for Things 3 — expose your tasks over HTTP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Jayden Kerr" }]
keywords = ["things", "things3", "api", "rest", "tasks", "gtd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "fastapi>=0.135,<1",
    "uvicorn[standard]>=0.34,<1",
    "things.py>=1.0,<2",
    "pydantic-settings>=2.13,<3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]

[project.scripts]
things-api = "things_api.app:main"

[project.urls]
Homepage = "https://github.com/jaydenk/things-api"
Issues = "https://github.com/jaydenk/things-api/issues"
